[package]
name = "floww"
version = "0.1.0"
edition = "2018"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
description = "Musical information crate."
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/ocdy1001/floww"
keywords = ["music"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apres = "0.3.0"
