[package]
name = "floww"
version = "0.1.12"
edition = "2021"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
description = "Musical information crate."
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/codybloemhard/floww"
keywords = ["music"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apres = "0.3.4"
serde = { version = "1.0.202", features = ["derive"] }
bincode = "1.3.3"
fnrs = "0.1.7"
